@@ -20,6 +20,7 @@
  */
 
 #include <dfsch/hash.h>
+#include <dfsch/compile.h>
 #include "internal.h"
 #include <stdlib.h>
 #include "util.h"
@@ -571,7 +572,7 @@ static dfsch_object_t* native_alist_2_hash(void *baton, dfsch_object_t* args,
   dfsch_error("exception:unknown-mode", mode);
 }
 
-DFSCH_DEFINE_FORM_IMPL(with_hash, NULL){
+DFSCH_DEFINE_FORM_IMPL(with_hash, dfsch_form_compiler_eval_all){
   dfsch_object_t *hash;
   dfsch_object_t *code;
 
